--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@ header-img: "img/about-bg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>写写代码，做做设计，<br>
-    离开世界之前，一切都是过程</p></blockquote>
+    <blockquote><p>学习<br>
+    我生命中最美好的两个字</p></blockquote>
 
     <p>Hey，我是<strong>ZingLix</strong>，计算机专业学生，爱编程，爱技术，爱黑科技：D</p>
 
@@ -25,6 +25,8 @@ header-img: "img/about-bg.jpg"
     <p>完全无聊建了这个站，权当个人作品集，看看四年里我究竟能干些什么~</p>
     
     <p>这里出现的大概会有：各种算法、各种自己乱搞的项目、各种研究的好玩的东西</p>
+
+    <p>Get better.</p>
     
 </div>
 
