--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/about-bg.jpg"
     <blockquote><p>学习<br>
     我生命中最美好的两个字</p></blockquote>
 
-    <p>Hey，我是<strong>ZingLix</strong>，计算机专业学生，爱编程，爱技术，爱黑科技：D</p>
+    <p>Hey，我是<strong>ZingLix</strong>(别问我这名字什么意思我也不知道我怎么想出来的)，计算机专业学生，爱编程，爱技术，爱黑科技：D</p>
 
     <p>不小心入了ACM的坑，正被算法折磨的死去活来中...</p>
 
@@ -27,6 +27,8 @@ header-img: "img/about-bg.jpg"
     <p>这里出现的大概会有：各种算法、各种自己乱搞的项目、各种研究的好玩的东西</p>
 
     <p>Get better.</p>
+
+    <p>联系邮箱：zinglix@126.com</p>
     
 </div>
 
