--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ header-img: "img/about-bg.jpg"
 
     <p>Get better.</p>
 
-    <p>联系邮箱：zinglix@126.com</p>
+    <p>联系邮箱：zinglix.liu@gmail.com</p>
     
 </div>
 
