add witness solver introduction

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@ header-img: "img/port-bg.jpg"
         </div>
     </div>
 </header>
-<h1 align="center">still working on it......</h1>
+
 <div class="container">
     <div class="wrapper">
         <div class="home">
@@ -29,17 +29,17 @@ header-img: "img/port-bg.jpg"
 
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3><span class="post-meta pull-right"><small>{{ post.date | date: "%b %-d, %Y" }}</small></span>
+                            <h3 class="pull-left">{{ post.title | truncate: 25 }}</h3><h4 class="panel-title pull-right">{{ post.date | date: "%b %-d, %Y" }}</h4>
                         </div>
                         {% if post.img %}
                         <img width="100%" src="{{site.baseurl}}/{{post.img}}" alt="{{post.title}}">
-                        {% else %}
-                        <img width="100%" src="{{site.baseurl}}/webjeda-logo-big.jpg" alt="{{site.title}}">
                         {% endif %}
                         <div class="panel-body">
                             <small>
                                 {{ post.excerpt | strip_html | strip_newlines | truncate: 160 }}
                             </small>
+                        </div>
+                        <div class="panel-body">
                             <a href="{{site.baseurl}}/{{ post.link}}" class="btn btn-primary btn-sm pull-right mt10">Read</a>
                         </div>
                     </div>
