--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@ header-img: "img/port-bg.jpg"
 
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <h3 class="pull-left">{{ post.title | truncate: 25 }}</h3><h4 class="panel-title pull-right">{{ post.date | date: "%b %-d, %Y" }}</h4>
+                            <h3 class="pull-left">{{ post.title | truncate: 25 }}</h3>
                         </div>
                         {% if post.img %}
                         <img width="100%" src="{{site.baseurl}}/{{post.img}}" alt="{{post.title}}">
