--- a/about.html
+++ b/about.html
@@ -13,25 +13,9 @@ header-img: "img/about-bg.jpg"
 
 <!-- Chinese Version -->
 <div class="zh post-container">
-
-    <!--copied from markdown -->
-    <blockquote><p>学习<br>
-    我生命中最美好的两个字</p></blockquote>
-
-    <p>Hey，我是<strong>ZingLix</strong>(别问我这名字什么意思我也不知道我怎么想出来的)，计算机专业学生，爱编程，爱技术，爱黑科技：D</p>
-
-    <p>ACM的坑已弃，毕竟CS还有那么多东西等着我去研究，但是算法这坑还是逃不过...</p>
-
-    <p>完全出于兴趣建了这个站，权当个人作品集，看看四年里我究竟能干些什么~</p>
-    
-    <p>这里出现的大概会有：各种学习笔记、各种自己乱搞的项目、各种研究的好玩的东西</p>
-
-    <p>我也不知道之后还会学到些什么，反正学了再说：D</p>
-
-    <p>Always be better.</p>
-
-    <p>Contact Email：zinglix.liu@gmail.com</p>
-    
+    {% capture about-zh %}{% include include/about-zh.md %}{% endcapture %} 
+    {{ about-zh | markdownify }}
+  
 </div>
 
 <!-- English Version -->
