--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
+title: 404
+hide-in-nav: true
+description: "你在寻找的是哪一颗呢？"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
