--- a/papernote.html
+++ b/papernote.html
@@ -1,8 +1,8 @@
 ---
-title: Archive
+title: Papernote
 layout: default
-description: 
-header-img: "img/post-22.jpg"
+description: "论文笔记"
+header-img: "img/post-14.png"
 ---
 
 <!-- 
@@ -23,30 +23,30 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			<div id='tag_cloud' class="tags tags-sup js-tags">
 				<a class="tag-button--all" data-encode="">
 					Show All
-					<sup>{{_normal_posts.size}}</sup>
+					<sup>{{_pn_posts.size}}</sup>
 				</a>
 
 				{%- capture tags -%}
 				{%- for tag in site.tags -%}
 				{%- assign identifier = tag[0] | slice: -3, 3 -%}
-				{%- if identifier != "_pn" -%}
+				{%- if identifier == "_pn" -%}
+				{%- assign raw_text = tag[0] |remove: "_pn"-%}
 				<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
 					data-encode="{{ tag[0] | strip | url_encode }}"
 					class="tag-button"
-					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-					{{ tag[0] }}
+					title="{{ raw_text }}" rel="{{ tag[1].size }}">
+					{{ raw_text}}
 					<sup>{{tag[1].size}}</sup>
 				</a>
-				__SEPERATOR__
 				{%- endif -%}
 				{%- endfor -%}
 				{%- endcapture -%}
-				{{ tags | split:'__SEPERATOR__'  |sort  }}
+				{{ tags | split:'</a>' | sort | join:'</a>' }}
 			</div>
 
             <!-- Article List -->
 			<div class="mini-post-list js-result d-none">
-			{%- assign _sorted_list = _normal_posts -%}
+			{%- assign _sorted_list = _pn_posts -%}
 			{%- assign _sorted_list = _sorted_list | sort: 'date' -%}
 			{%- assign _sorted_list = _sorted_list | reverse -%}
 
