fix page description

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "你在寻找的是哪一颗呢？"
+subtitle: "你在寻找的是哪一颗呢？"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
