--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is ZingLix."
+subtitle: "Hey, this is ZingLix."
 header-img: "img/about-bg.jpg"
 ---
 
