--- a/license.html
+++ b/license.html
@@ -2,7 +2,7 @@
 layout: page
 title: "License"
 hide-in-nav: true
-description: "CC BY-NC 4.0"
+subtitle: "CC BY-NC 4.0"
 header-img: "img/post-3.jpg"
 ---
 
