--- a/offline.html
+++ b/offline.html
@@ -2,7 +2,7 @@
 layout: default
 title: Offline
 hide-in-nav: true
-description: "当前网络不可用 :("
+subtitle: "当前网络不可用 :("
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
