--- a/wiki.html
+++ b/wiki.html
@@ -1,7 +1,7 @@
 ---
 title: Wiki
 layout: default
-subtitle: "知识库"
+subtitle: "各种零碎的知识"
 header-img: "img/post-16.jpg"
 hide-in-nav: true
 tagcloud: true
