--- a/onesentence.html
+++ b/onesentence.html
@@ -2,7 +2,7 @@
 layout: default
 hide-in-nav: true
 header-img: "img/os-bg.jpg"
-permalink: /os.html
+permalink: /onesentence.html
 hide-cat: true
 ---
 
@@ -16,7 +16,7 @@ hide-cat: true
 		<div style="position: relative; margin-top: 35vh;margin-bottom: 35vh; margin-left: auto;margin-right: auto; width: 55%;">
 			
 		  <div style="position: absolute;left: 0; top: 0;">『</div>
-          <div id="sentence" style="font-size: 3.3rem; text-align: center; line-height: 80px; word-break: normal; margin: 0; padding: 15px 50px;">...</div>
+          <div id="sentence" style="font-size: 3.3rem; text-align: center; line-height: 80px; word-break: normal; margin: 0; padding: 15px 50px;" onclick="update()">...</div>
           <div style="position: absolute;right: 0; bottom: 0;">』</div>
 		  
           <div id="from" style="display: none;font-size: 20px;float: right;margin-top: 40px;color: rgba(255, 255, 255, 0.8);"></div>
@@ -29,7 +29,8 @@ hide-cat: true
 
 <script>
 	document.body.classList.add('page-fullscreen');
-	fetch('https://onesentence.zinglix.workers.dev/')
+  function update(){
+	fetch('https:/zinglix.xyz/api/onesentence/')
           .then(response =>{return response.json();})
           .then(data => {
             $('div#sentence').text(data['sentence']);
@@ -37,4 +38,6 @@ hide-cat: true
               $('div#from').show().text("——"+data['from']);
             }
           });
+        }
+  update();
 </script>
